@@ -1,5 +1,5 @@
 /*
-    Copyright 2009-2010, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 2009-2012, Felspar Co Ltd. http://fost.3.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -8,7 +8,6 @@
 
 #include "fost-core.hpp"
 #include <fost/detail/unicode.hpp>
-#include <fost/detail/base64.hpp>
 #include <fost/detail/hex.hpp>
 
 #include <fost/exception/not_implemented.hpp>
