@@ -1,3 +1,6 @@
+2012-04-16  Kirit Saelensminde  <kirit@felspar.com>
+ Finally implemented the decode portion of base 64 support.
+
 2012-04-08  Kirit Saelensminde  <kirit@felspar.com>
  Fixed up a problem where the crypto++ library wasn't installing properly on Windows.
 
